# KTaivle_Prototype

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  add_is_deleted_column.py  fix_template.py  implementation_plan.md  pksmart_eval_tox.py  pksmart_predict.py  pksmart_train.py  pksmart_train_ld50.py  pksmart_train_tox.py  pyproject.toml  requirements.txt  restart_server.ps1  run_app.py  run_pbpk_study.py  single_prediction_output.csv  test_inference.py  test_target_smiles.py
.agent/: rules.md
External_Test_ALL_Lombardo_FDA_CL_fu_V2/: FDA_v2.csv
app/: auth.py  database.py  inference.py  main.py  main.py.bak  models.py  schemas.py
data/: ld50.csv
docs/: DEVELOPER_GUIDE.md  IND_Agent_Integration_Guide.md  IND_DATA_MAPPING_ISSUE.md  project_result.md  tox_module_documentation.md
models/: dog_CL_mL_min_kg_imputer.joblib  dog_CL_mL_min_kg_model.joblib  dog_VDss_L_kg_imputer.joblib  dog_VDss_L_kg_model.joblib  dog_fup_imputer.joblib  dog_fup_model.joblib  human_CL_mL_min_kg_imputer.joblib  human_VDss_L_kg_imputer.joblib  human_fup_imputer.joblib  human_mrt_imputer.joblib  human_thalf_imputer.joblib  monkey_CL_mL_min_kg_imputer.joblib  monkey_CL_mL_min_kg_model.joblib  monkey_VDss_L_kg_imputer.joblib  monkey_VDss_L_kg_model.joblib  monkey_fup_imputer.joblib  monkey_fup_model.joblib  rat_CL_mL_min_kg_imputer.joblib  rat_CL_mL_min_kg_model.joblib  rat_VDss_L_kg_imputer.joblib  rat_VDss_L_kg_model.joblib  rat_fup_imputer.joblib  rat_fup_model.joblib
pksmart/: batch_simulator.py  features.py  models.py  monte_carlo_simulator.py  mpbpk_engine.py  mpbpk_ml.py  (+4 more)
(+87 files in other folders)
